--- a/Ex2_linearlayout/app/src/main/res/layout/activity_main.xml
+++ b/Ex2_linearlayout/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
         />
     <Button
         android:id="@+id/button3"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:background="@color/black"
         android:text="Nút số 3"
