--- a/Ex3_SimpleSumApp/app/src/main/res/layout/activity_main.xml
+++ b/Ex3_SimpleSumApp/app/src/main/res/layout/activity_main.xml
@@ -19,15 +19,16 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/edta"
+        android:id="@+id/edtA"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="20dp"
         android:ems="10"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -43,7 +44,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <EditText
-        android:id="@+id/edtb"
+        android:id="@+id/edtB"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -53,7 +54,7 @@
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/edta" />
+        app:layout_constraintTop_toBottomOf="@+id/edtA" />
 
     <Button
         android:id="@+id/btnCong"
@@ -62,12 +63,12 @@
         android:layout_marginStart="169dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="129dp"
-        android:onClick="xulycong"
+        android:onClick="XuLyCong"
         android:text="Tính Tổng"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.555"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtb"
+        app:layout_constraintTop_toBottomOf="@+id/edtB"
         tools:ignore="HardcodedText" />
 
     <TextView
@@ -82,7 +83,7 @@
         app:layout_constraintTop_toBottomOf="@+id/btnCong" />
 
     <EditText
-        android:id="@+id/edtkq"
+        android:id="@+id/edtKQ"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
