--- a/Ex4_AddSubMulDiv_Onclick/app/src/main/res/layout/activity_main.xml
+++ b/Ex4_AddSubMulDiv_Onclick/app/src/main/res/layout/activity_main.xml
@@ -55,34 +55,35 @@
         android:layout_height="50dp">
      <Button
          android:id="@+id/btnCong"
-
          android:layout_margin="2dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
-         android:text="+"/>
+         android:text="+"
+         android:onClick="XuLyCong"
+         />
         <Button
             android:id="@+id/btnTru"
-
             android:layout_margin="2dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="-"/>
+            android:text="-"
+            android:onClick="XuLyTru"/>
 
         <Button
             android:id="@+id/btnNhan"
-
             android:layout_margin="2dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="*"/>
+            android:text="*"
+            android:onClick="XuLyNhan"/>
 
         <Button
             android:id="@+id/btnChia"
-
             android:layout_margin="2dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="/"/>
+            android:text="/"
+            android:onClick="XuLyChia"/>
 
 
     </LinearLayout>
@@ -102,11 +103,11 @@
             android:textColor="@color/black"/>
         <EditText
             android:id="@+id/edtKetQua"
-
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Noi hien ket qua"
             android:enabled="false"/>
+
 
     </LinearLayout>
 </LinearLayout>
