--- a/Ex5_AddSubMulDiv_Anynomous/app/src/main/res/layout/activity_main.xml
+++ b/Ex5_AddSubMulDiv_Anynomous/app/src/main/res/layout/activity_main.xml
@@ -101,7 +101,7 @@
             android:text="Số thứ nhất"
             android:textSize="18dp"/>
         <EditText
-            android:id="@+id/edtKQ"
+            android:id="@+id/edtKetQua"
             android:layout_marginTop="2dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
