--- a/Cau2_BMIApp/app/src/main/res/layout/activity_main.xml
+++ b/Cau2_BMIApp/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,9 @@
 
 
     <LinearLayout
+        android:layout_marginBottom="5dp"
         android:orientation="horizontal"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:weightSum="2">
@@ -82,5 +84,26 @@
 
 
     </LinearLayout>
+
+    <androidx.cardview.widget.CardView
+        app:cardCornerRadius="12dp"
+        android:layout_margin="12dp"
+        app:cardElevation="2dp"
+        android:layout_width="match_parent"
+        android:layout_height="110dp">
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+
+
+
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+
 
 </LinearLayout>
