update giao diện

--- a/Cau2_AppBMI/app/src/main/res/layout/activity_main.xml
+++ b/Cau2_AppBMI/app/src/main/res/layout/activity_main.xml
@@ -89,12 +89,48 @@
         </androidx.cardview.widget.CardView>
 
 
+        <androidx.cardview.widget.CardView
+            android:layout_width="0dp"
+            android:layout_height="110dp"
+            android:layout_margin="12dp"
+            android:layout_weight="1"
+            app:cardCornerRadius="12dp"
+            app:cardElevation="2dp">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/textweight"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
+                    android:text="Weight (kg)"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+                <ImageView
+                    android:id="@+id/imageweight"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="1dp"
+                    android:layout_toStartOf="@id/textweight"
+                    android:src="@drawable/can" />
+
+            </RelativeLayout>
+
+
+
+
+        </androidx.cardview.widget.CardView>
 
 
     </LinearLayout>
 
 
 
-
+   
 
 </LinearLayout>
