--- a/Cau2_AppBMI/app/src/main/res/layout/activity_main.xml
+++ b/Cau2_AppBMI/app/src/main/res/layout/activity_main.xml
@@ -131,6 +131,67 @@
 
 
 
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:layout_margin="12dp"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="2dp">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
+            <!-- ImageView for BMI result -->
+
+
+            <ImageView
+                android:id="@+id/imageBMI"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="75dp"
+                android:src="@drawable/result" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="127dp"
+                android:layout_height="51dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="111dp"
+                android:layout_marginEnd="109dp"
+                android:layout_marginBottom="55dp"
+                android:text="BMI result"
+                android:textColor="#19DB1F"
+                android:textSize="22sp"
+                android:textStyle="bold" />
+
+        </RelativeLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardBtn"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_margin="12dp"
+        app:cardBackgroundColor="#19DB1F"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="2dp">
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Calculator"
+            android:textColor="@color/white"
+            android:textSize="22sp"
+            android:textStyle="bold">
+
+        </TextView>
+
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
