--- a/BottomNavigation/app/src/main/res/layout/activity_main.xml
+++ b/BottomNavigation/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
         app:menu="@menu/bottom_navmenu"/>
 
     <FrameLayout
+        android:id="@+id/fram_layout"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
