--- a/BottomNavigation/app/src/main/res/layout/fragment_profile.xml
+++ b/BottomNavigation/app/src/main/res/layout/fragment_profile.xml
@@ -3,12 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProfileFragment">
+    tools:context=".ProfileFragment"
+    android:background="#6A38C5">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Profile Fragment"
+        android:textSize="26dp"
+        android:layout_gravity="center"/>
 
 </FrameLayout>
