--- a/BottomNavigation/app/src/main/res/menu/bottom_navmenu.xml
+++ b/BottomNavigation/app/src/main/res/menu/bottom_navmenu.xml
@@ -3,7 +3,10 @@
 
     <item android:title="Home"
         android:icon="@drawable/baseline_home_24"
-        android:id="@+id/home"/>
+        android:id="@+id/home"
+
+
+        />
     <item android:title="Profile"
         android:icon="@drawable/baseline_accessibility_24"
         android:id="@+id/profile"/>
