--- a/BottomNavigation/app/src/main/res/layout/fragment_home.xml
+++ b/BottomNavigation/app/src/main/res/layout/fragment_home.xml
@@ -10,9 +10,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Home Fragment"
-        android:textSize="26dp"
         android:layout_gravity="center"
-        />
+        android:text="Home Fragment"
+        android:textSize="26dp" />
 
 </FrameLayout>
