--- a/BottomNavigation/app/src/main/res/layout/fragment_profile.xml
+++ b/BottomNavigation/app/src/main/res/layout/fragment_profile.xml
@@ -10,8 +10,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:text="Profile Fragment"
-        android:textSize="26dp"
-        android:layout_gravity="center"/>
+        android:textColor="@color/white"
+        android:textSize="26dp" />
 
 </FrameLayout>
